# arg/configure.ac
#
AC_INIT([arg],[1.1],[cjj@u.washington.edu])
AC_CONFIG_SRCDIR([arg.cc])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
ARG_MODULE_NAME=${PACKAGE}-${VERSION}
AC_SUBST(ARG_MODULE_NAME)

AC_PROG_CXX
LT_INIT

AC_LANG(C++)

AC_CONFIG_FILES([
	Makefile
	${ARG_MODULE_NAME}.pc:arg.pc.in
])
AC_OUTPUT
